@@ -15,6 +15,7 @@
 #include <yarp/os/Vocab.h>
 
 #include <stdio.h>
+#include <string.h>
 
 using namespace yarp::os;
 using namespace yarp::sig;
@@ -46,11 +47,58 @@ public:
     NetInt32 dataHeader;
     NetInt32 dataLength;
 
-    void setup(const Sound& sound);
+    void setup_to_write(const Sound& sound);
+    bool parse_from_file(FILE *fp);
 } PACKED_FOR_NET;
 #include <yarp/os/end_pack_for_net.h>
 
-void PcmWavHeader::setup(const Sound& src) {
+bool PcmWavHeader::parse_from_file(FILE *fp)
+{
+    size_t result;
+    result = fread(&wavHeader,sizeof(wavHeader),1,fp);
+    result = fread(&wavLength,sizeof(wavLength),1,fp);
+    result = fread(&formatHeader1,sizeof(formatHeader1),1,fp);
+
+    result = fread(&formatHeader2,sizeof(formatHeader2),1,fp);
+    result = fread(&formatLength,sizeof(formatLength),1,fp);
+
+    result = fread(&pcm.pcmFormatTag,sizeof(pcm.pcmFormatTag),1,fp);
+    result = fread(&pcm.pcmChannels,sizeof(pcm.pcmChannels),1,fp);
+    result = fread(&pcm.pcmSamplesPerSecond,sizeof(pcm.pcmSamplesPerSecond),1,fp);
+    result = fread(&pcm.pcmBytesPerSecond,sizeof(pcm.pcmBytesPerSecond),1,fp);
+    result = fread(&pcm.pcmBlockAlign,sizeof(pcm.pcmBlockAlign),1,fp);
+    result = fread(&pcm.pcmBitsPerSample,sizeof(pcm.pcmBitsPerSample),1,fp);
+    if (pcm.pcmBitsPerSample!=16)
+    {
+        printf("sorry, lousy wav read code only does 16-bit ints\n");
+        return false;
+    }
+
+    //extra bytes in pcm chuck
+    int extra_size = formatLength-sizeof(pcm);
+    pcmExtraData.allocate(extra_size);
+    result = fread(&pcmExtraData,extra_size,1,fp);
+
+    //extra chuncks
+    result = fread(&dummyHeader,sizeof(dummyHeader),1,fp);
+
+    while (dummyHeader!=VOCAB4('d','a','t','a'))
+    {
+        result = fread(&dummyLength,sizeof(dummyLength),1,fp);
+        dummyData.clear();
+        dummyData.allocate(dummyLength);
+        result = fread(&dummyData,dummyLength,1,fp);
+        result = fread(&dummyHeader,sizeof(dummyHeader),1,fp);
+    }
+
+    dataHeader=dummyHeader;
+    result = fread(&dataLength,sizeof(dataLength),1,fp);
+
+    return true;
+}
+
+void PcmWavHeader::setup_to_write(const Sound& src)
+{
     int bitsPerSample = 16;
     int channels = src.getChannels();
     int bytes = channels*src.getSamples()*2;
@@ -73,64 +121,34 @@ void PcmWavHeader::setup(const Sound& src) {
     dataLength = bytes;
 }
 
-bool yarp::sig::file::read(Sound& dest, const char *src) {
-	FILE *fp = fopen(src, "rb");
-	if (!fp) {
+bool yarp::sig::file::read(Sound& dest, const char *src)
+{
+    FILE *fp = fopen(src, "rb");
+    if (!fp) {
         printf("cannot open file %s for reading\n", src);
         return false;
     }
 
     PcmWavHeader header;
-    fread(&header.wavHeader,sizeof(header.wavHeader),1,fp);
-    fread(&header.wavLength,sizeof(header.wavLength),1,fp);
-    fread(&header.formatHeader1,sizeof(header.formatHeader1),1,fp);
-
-    fread(&header.formatHeader2,sizeof(header.formatHeader2),1,fp);
-    fread(&header.formatLength,sizeof(header.formatLength),1,fp);
-
-    fread(&header.pcm.pcmFormatTag,sizeof(header.pcm.pcmFormatTag),1,fp);
-    fread(&header.pcm.pcmChannels,sizeof(header.pcm.pcmChannels),1,fp);
-    fread(&header.pcm.pcmSamplesPerSecond,sizeof(header.pcm.pcmSamplesPerSecond),1,fp);
-    fread(&header.pcm.pcmBytesPerSecond,sizeof(header.pcm.pcmBytesPerSecond),1,fp);
-    fread(&header.pcm.pcmBlockAlign,sizeof(header.pcm.pcmBlockAlign),1,fp);
-    fread(&header.pcm.pcmBitsPerSample,sizeof(header.pcm.pcmBitsPerSample),1,fp);
-    //extra bytes in pcm chuck
-    int extra_size = header.formatLength-sizeof(header.pcm);
-    header.pcmExtraData.allocate(extra_size);
-    fread(&header.pcmExtraData,extra_size,1,fp);
-
-    //extra chuncks
-    fread(&header.dummyHeader,sizeof(header.dummyHeader),1,fp);
-
-    while (header.dummyHeader!=VOCAB4('d','a','t','a'))
+    if (!header.parse_from_file(fp))
     {
-        fread(&header.dummyLength,sizeof(header.dummyLength),1,fp);
-        header.dummyData.clear();
-        header.dummyData.allocate(header.dummyLength);
-        fread(&header.dummyData,header.dummyLength,1,fp);
-        fread(&header.dummyHeader,sizeof(header.dummyHeader),1,fp);
-    }
-
-    header.dataHeader=header.dummyHeader;
-    fread(&header.dataLength,sizeof(header.dataLength),1,fp);
-    
-    int freq = header.pcm.pcmSamplesPerSecond;
-    int channels = header.pcm.pcmChannels;
-    int expect = header.dataLength;
-    int bits = header.pcm.pcmBitsPerSample;
-    if (bits!=16) {
-        printf("sorry, lousy wav read code only does 16-bit ints\n");
+        printf("error parsing header of file %s\n", src);
         fclose(fp);
         return false;
-    }
-    int samples = (expect/2)/channels;
-    printf("%d channels %d samples %d frequency\n",
-           channels, samples, freq);
+    };
+
+
+    int freq = header.pcm.pcmSamplesPerSecond;
+    int channels = header.pcm.pcmChannels;
+    int bits = header.pcm.pcmBitsPerSample;
+    int samples = header.dataLength/(bits/8)/channels;
     dest.resize(samples,channels);
     dest.setFrequency(freq);
+    ManagedBytes bytes(header.dataLength);
+    printf("%d channels %d samples %d frequency\n", channels, samples, freq);
 
-    ManagedBytes bytes(expect);
-    fread(bytes.get(),bytes.length(),1,fp);
+    size_t result;
+    result = fread(bytes.get(),bytes.length(),1,fp);
 
     NetInt16 *data = (NetInt16*)bytes.get();
     int ct = 0;
@@ -146,15 +164,16 @@ bool yarp::sig::file::read(Sound& dest, const char *src) {
 }
 
 
-bool yarp::sig::file::write(const Sound& src, const char *dest) {
-	FILE *fp = fopen(dest, "wb");
-	if (!fp) {
+bool yarp::sig::file::write(const Sound& src, const char *dest)
+{
+    FILE *fp = fopen(dest, "wb");
+    if (!fp) {
         printf("cannot open file %s for writing\n", dest);
         return false;
     }
 
     PcmWavHeader header;
-    header.setup(src);
+    header.setup_to_write(src);
     fwrite((void*)&header, 1, sizeof(header), fp);
  
     ManagedBytes bytes(header.dataLength);
@@ -173,4 +192,101 @@ bool yarp::sig::file::write(const Sound& src, const char *dest) {
 
     fclose(fp);
     return true;
+}
+
+bool yarp::sig::file::soundStreamReader::open(const char *filename)
+{
+    if (fp)
+    {
+        printf("file %s is already open\n", fname);
+        return false;
+    }
+
+    fp = fopen(filename, "rb");
+    if (!fp)
+    {
+        printf("cannot open file %s for reading\n", filename);
+        return false;
+    }
+    strcpy(fname,filename);
+    PcmWavHeader header;
+    if (!header.parse_from_file(fp))
+    {
+        printf("error parsing header of file %s\n", fname);
+        fclose(fp);
+        return false;
+    }
+    this->soundInfo.freq = header.pcm.pcmSamplesPerSecond;
+    this->soundInfo.channels = header.pcm.pcmChannels;
+    this->soundInfo.bits = header.pcm.pcmBitsPerSample;
+    this->soundInfo.samples = header.dataLength/(this->soundInfo.bits/8)/this->soundInfo.channels;
+    this->soundInfo.data_start_offset = ftell(fp);
+
+    return true;
+}
+
+bool yarp::sig::file::soundStreamReader::close()
+{
+    if (!fp)
+    {
+        printf("no files open\n");
+        return false;
+    }
+
+    fclose(fp);
+    fname[0]=0;
+    index=0;
+    return true;
+}
+
+size_t yarp::sig::file::soundStreamReader::readBlock(Sound& dest, size_t block_size)
+{
+    int expected_bytes = block_size*(soundInfo.bits/8)*soundInfo.channels; 
+
+    //this probably works only if soundInfo.bits=16
+    int expected_words=expected_bytes/(soundInfo.bits/8);
+    NetInt16     *data = new NetInt16 [expected_words]; 
+
+    int bytes_read = fread(data,1,expected_bytes,fp);
+    int samples_read = bytes_read/(soundInfo.bits/8)/soundInfo.channels;
+
+    dest.resize(samples_read,soundInfo.channels);
+    dest.setFrequency(soundInfo.freq);
+
+    int ct = 0;
+    for (size_t i=0; i<samples_read; i++) {
+        for (int j=0; j<soundInfo.channels; j++) {
+            dest.set(data[ct],i,j);
+            ct++;
+        }
+    }
+    index+=samples_read;
+
+    delete [] data;
+    return samples_read;
+}
+
+bool  yarp::sig::file::soundStreamReader::rewind(size_t sample_offset)
+{
+    if (!fp)
+    {
+        printf("no files open\n");
+        return false;
+    }
+
+    if (sample_offset<0 || sample_offset>this->soundInfo.samples)
+    {
+        printf("invalid sample_offset\n");
+        return false;
+    }
+
+    fseek(fp,this->soundInfo.data_start_offset+(sample_offset*this->soundInfo.channels*this->soundInfo.bits/2),SEEK_SET);
+    index=sample_offset;
+
+    return true;
+}
+
+size_t yarp::sig::file::soundStreamReader::getIndex()
+{
+    return index;
 }
