@@ -1,3 +1,11 @@
+2014-01-02 Marco Randazzo <marco.randazzo@iit.it>
+    * yarp2\src\libYARP_sig\src\SoundFile.cpp
+    * yarp2\src\libYARP_sig\include\yarp\sig\SoundFile.cpp
+    added soundStreamReader class to incrementally read chunks of sound file (instead of the whole file)
+ 
+    * /example/portaudio/sound_sender_file_chunks.cpp
+    added example to demonstrate use of soundStreamReader class 
+    
 2013-12-23 Marco Randazzo <marco.randazzo@iit.it>
     * yarp2\src\libYARP_sig\src\sound
     added yarp::sig::Sound::subSound() method to split a sound into two subsounds
